<resources>
    <string name="app_name">IQtimer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="back">Back</string>
    <string name="obzor">Overview</string>
    <string name="obzor_stat_day">Today</string>
    <string name="obzor_stat_week">Week</string>
    <string name="obzor_stat_month">Month</string>
    <string name="obzor_stat_total">Total</string>
    <string name="stat_chart_description">Sessions per day</string>
    <string name="stat_chart_planday">Plan</string>
    <string name="dialog_session_end">Session finished</string>
    <string name="dialog_rest_start">Start break</string>
    <string name="break_skip">Skip break</string>
    <string name="pref_def_sound">Default sound</string>
    <string name="dialog_break_end">Break finished</string>
    <string name="work_start">Start work</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="qest_continue">Continue?</string>
    <string name="break_time">Break in progress</string>
    <string name="dowork">Work session in progress</string>
    <string name="on_pause">Work session is paused</string>
    <string name="qest_break">Start break?</string>
    <string name="minut">min.</string>
    <string name="sessiy">sessions</string>
    <string name="days">days</string>
    <string name="pref_sounds">Finished work notification sound</string>
    <string name="ok">OK</string>
    <string name="pref_sounds_break">Finished break notification sound</string>
    <string name="pref_vibrator">Vibration</string>
    <string name="no">No</string>
    <string name="delicate">Soft</string>
    <string name="strong">Strong</string>
    <string name="puls">Puls</string>
    <string name="fanfare">Fanfare</string>
    <string name="starwars">Star Wars</string>
    <string name="set_category_timer">Timer and plan</string>
    <string name="set_category_notif">Notifications</string>
    <string name="set_category_mainscreen">Main screen</string>
    <string name="set_swith_count">Show session counter</string>
    <string name="set_swith_counter">Show effective days counter</string>
    <string name="set_swith_notif">Notification sound</string>
    <string name="history">History, days</string>
    <string name="stat_list">List</string>
    <string name="stat_actionbar_title">Statistics</string>
    <string name="sett_actionbar_title">Settings</string>
    <string name="about">About</string>
    <string name="sett_e_tost">Please enter a number from 1 to 30</string>
    <string name="history_month">History, months</string>
    <string name="stat_chart_description_month">Sessions per month</string>
    <string name="stat_graph">Chart</string>
    <string name="icon_for_menu">Icon for Menu</string>
    <string name="progress_efective_days">Effective days in a row</string>
    <string name="progress">Achievements</string>
    <string name="show_yet">Show more</string>
    <string name="list_stat_empty_text">No data yet</string>
    <string name="maingoal_text_title">Main goal</string>
    <string name="set_goal">Set a goal</string>
    <string name="empty">Empty</string>
    <string name="dlg_progress_q_days">Number of days</string>
    <string name="goal_name_empty">Goal name</string>
    <string name="goal_desc_empty">Description of the goal</string>
    <string name="powerdays">effective days</string>
    <string name="dlg_delete_goal_title">Delete goal?</string>
    <string name="textGoalDone">You did it 100%!</string>
    <string name="new_goal">New goal</string>
    <string name="textDaysEnded">"You have completed the goal for "</string>
    <string name="p_title_entuziast">Enthusiast</string>
    <string name="p_title_voin">Weekend Warrior</string>
    <string name="p_title_hero">Weekend Hero</string>
    <string name="p_title_pokoritel">Conqueror</string>
    <string name="p_title_legenda">Legend</string>
    <string name="p_title_pobeditel">Winner</string>
    <string name="p_title_boss">Boss</string>
    <string name="p_desc_entuziast">Stay productive for %1$d working days in a row</string>
    <string name="p_desc_voin">Work on %1$d weekends</string>
    <string name="p_desc_hero">Complete the plan on %1$d weekends</string>
    <string name="p_desc_pokoritel">Work %1$d consecutive working days</string>
    <string name="p_desc_legenda">Complete the Enthusiast, Weekend Hero, and Conqueror achievements up to level %1$d</string>
    <string name="p_desc_pobeditel">Complete all achievements up to level 10</string>
    <string name="p_desc_boss">Fulfill %1$d Main goals</string>
    <string name="level">Level %1$d</string>
    <string name="onback">Press the back button again to exit</string>
    <string name="tutorial_mess1">Tap the timer to start and pause</string>
    <string name="tutorial_mess2">This is a status bar with a plan for the day and its implementation</string>
    <string name="tutorial_mess3">This is the number of sessions per day</string>
    <string-array name="goals">
        <item>Sessions</item>
        <item>Effective days</item>
    </string-array>
    <string name="time_duration">Work session duration</string>
    <string name="break_duration">Break duration</string>
    <string name="by_default">By default</string>
    <string name="plan_day">Plan for the day</string>
    <string name="text_my_goal">My goal:</string>
    <string name="text_in">in</string>
    <string name="text_quantity">Quantity</string>
    <string name="goal_number">Goal #1</string>
    <string name="text_Session">Sessions</string>
    <string name="reset_timer">Reset timer?</string>
    <string name="onlock_desc">Upgrade to the Premium version so you can support our App and get your Achievement page activated</string>
    <string name="premium">Premium</string>
    <string name="upgrade">Upgrade</string>
    <string name="descim_menu">Menu</string>
    <string name="count">sessions counter</string>
    <string name="todo">empty</string>
    <string name="avatar_ach">avatar for achievement</string>
    <string name="text_switch_out">Enable sound in silent mode</string>
    <string-array name="about">
        <item>Version 1.3</item>
        <item>Open Source Licenses</item>
    </string-array>
    <string name="text_license_common">
        Licensed under the Apache License, Version 2.0 (the \"License\"); \n
        you may not use this software except in compliance with the License. You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n\n

        Unless required by applicable law or agreed to in writing, software \n
        distributed under the License is distributed on an \"AS IS\" BASIS, \n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. \n
        See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="purchase_ack">Purchase Acknowledged</string>
    <string name="disconnected">No connection</string>
    <string name="already_owned">The item has already been purchased</string>
    <string name="mess_error">Invalid value</string>
    <string name="purchase_ok">Premium activated</string>
</resources>