<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:key="categ1"
        android:title="@string/set_category_timer">
    <EditTextPreference
        android:title="@string/time_duration"
        android:key="default_interval"
        android:summary="@string/by_default"
        android:defaultValue="45"
        />
    <EditTextPreference
        android:title="@string/break_duration"
        android:key="break_time"
        android:summary="@string/by_default"
        android:defaultValue="15"
        />
    <EditTextPreference
        android:title="@string/plan_day"
        android:key="set_plan_day"
        android:summary="@string/by_default"
        android:defaultValue="6"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categ2"
        android:title="@string/set_category_notif">
        <SwitchPreference
            android:key="switch_notif"
            android:title="@string/set_swith_notif"
            android:icon="@drawable/ic_outline_notifications_black"
            android:defaultValue="true"
          />
    <Preference
        android:key="set_dialog_sounds"
        android:title="@string/pref_sounds"
        android:summary="@string/by_default"
        android:defaultValue="0"
        />
    <Preference
        android:key="set_dialog_sounds_break"
        android:title="@string/pref_sounds_break"
        android:summary="@string/by_default"
        android:defaultValue="0"
        />

        <SwitchPreference
            android:key="switch_out"
            android:title="@string/text_switch_out"
            android:icon="@drawable/ic_outline_notif_important_24"
            android:defaultValue="false"
            />
    <Preference
        android:key="set_dialog_vibro"
        android:title="@string/pref_vibrator"
        android:summary="@string/by_default"
        android:defaultValue="0"
        android:icon="@drawable/ic_baseline_vibration_black"
        />
    </PreferenceCategory>

</PreferenceScreen>